* Strike the link to the redirect rather than using an asterisk in Special:Listredirects
* (bug 11355) Fix false positives in Safe Mode and other config detection
  when boolean settings are disabled with 'Off' via php_admin_value/php_value
* (bug 11292) Fixed unserialize errors with Postgres by creating special Blob object.
* (bug 11363) Make all metadata fields bytea when using Postgres.

=== API changes in 1.12 ===

Full API documentation is available at http://www.mediawiki.org/wiki/API

* (bug 11275) Enable descending sort in categorymembers
* (bug 11308) Allow the API to output the image metadata
* (bug 11296) Temporary fix for escaping of ampersands inside links in pretty-printed
  help document.

=== Languages updated in 1.12 ===

* Amharic (am) (new)
* Arabic (ar)
* Mapudungun (arn) (new)
* Asturian (ast)
* Samogitian (bat-smg)
* Bikol Central (bcl)
* Belarusian Taraskievica orthography (be-tarask)
* Bulgarian (bg)
* Bislama (bi) (new)
* Bengali (bn)
* Bishnupriya Manipuri (bpy)
* Catalan (ca)
* Breton (br)
* Czech (cs)
* Cassubian (csb)
* Welsh (cy)
* Danish (da)
* German (de)
* Lower Sorbian (dsb) (new)
* Greek (el)
* Spanish (es)
* Extremaduran (ext)
* Finnish (fi)
* Persian (fa)
* Võro (fiu-vro)
* Frisian (fy)
* French (fr)
* Cajun French (frc)
* Franco-Provençal (frp)
* Irish (ga)
* Galician (gl)
* Ancient Greek (grc) (new)
* Hakka (hak)
* Hebrew (he)
* Upper Sorbian (hsb)
* Indonesian (id)
* Icelandic (is)
* Italian (it)
* Kazakh (kk)
* Korean (ko)
* Latin (la)
* Limbugian (li)
* Malay (ms)
* Low Saxon (nds)
* Dutch (nl)
* Norwegian (no)
* Russian (ru)
* Sakha (sah)
* Sicilian (scn)
* Seri (sei) (new)
* Slovak (sk)
* Serbian (Cyrillic) (sr-ec)
* Sundanese (su)
* Tamil (ta)
* Tetun (tet) (new)
* Walloon (wa)
* Yiddish (yi)
* Zhuang (za)
* Zealandic (zea)

== Compatibility ==

MediaWiki 1.12 requires PHP 5 (5.1 recommended). PHP 4 is no longer supported.

PHP 5.0.x fails on 64-bit systems due to serious bugs with array processing: